vivado/ready/Kmeans/proj/sol/sol.log
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7k160t-fbg484-1'
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'kmeans.cpp' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from kmeans.cpp:1:
In file included from kmeans.cpp:1:
./kmeans.h:19:22: error: expected namespace name
using namespace std::chrono;
                ~~~~~^
In file included from kmeans.cpp:1:
kmeans.cpp:28:9: error: redefinition of 'data_in' with a different type
    int data_in[(1 << 23) * 100];
        ^
kmeans.cpp:26:21: note: previous definition is here
    unsigned short *data_in, *data_out, *centroids;
                    ^
kmeans.cpp:29:9: error: redefinition of 'data_out' with a different type
    int data_out[(1 << 23)];
        ^
kmeans.cpp:26:31: note: previous definition is here
    unsigned short *data_in, *data_out, *centroids;
                              ^
kmeans.cpp:30:9: error: redefinition of 'centroids' with a different type
    int centroids[num_clusters * 100];
        ^
kmeans.cpp:26:42: note: previous definition is here
    unsigned short *data_in, *data_out, *centroids;
                                         ^
kmeans.cpp:48:34: error: use of undeclared identifier 'UINT16_MAX'
            unsigned short min = UINT16_MAX, min_id = 0;
                                 ^
5 errors generated.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'kmeans.cpp' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from kmeans.cpp:1:
In file included from kmeans.cpp:1:
./kmeans.h:19:22: error: expected namespace name
using namespace std::chrono;
                ~~~~~^
In file included from kmeans.cpp:1:
kmeans.cpp:48:34: warning: implicit conversion from 'int' to 'unsigned short' changes value from 99999999 to 57599 [-Wconstant-conversion]
            unsigned short min = 99999999, min_id = 0;
                           ~~~   ^~~~~~~~
1 warning and 1 error generated.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'kmeans.cpp' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from kmeans.cpp:1:
In file included from kmeans.cpp:1:
./kmeans.h:19:22: error: expected namespace name
using namespace std::chrono;
                ~~~~~^
In file included from kmeans.cpp:1:
kmeans.cpp:48:34: warning: implicit conversion from 'int' to 'unsigned short' changes value from 99999 to 34463 [-Wconstant-conversion]
            unsigned short min = 99999, min_id = 0;
                           ~~~   ^~~~~
1 warning and 1 error generated.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'kmeans.cpp' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from kmeans.cpp:1:
In file included from kmeans.cpp:1:
./kmeans.h:19:22: error: expected namespace name
using namespace std::chrono;
                ~~~~~^
In file included from kmeans.cpp:1:
kmeans.cpp:48:34: warning: implicit conversion from 'int' to 'unsigned short' changes value from 99999 to 34463 [-Wconstant-conversion]
            unsigned short min = 99999, min_id = 0;
                           ~~~   ^~~~~
1 warning and 1 error generated.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'kmeans.cpp' ... 
INFO: [HLS 200-111] Finished Linking Time (s): cpu = 00:00:44 ; elapsed = 00:03:24 . Memory (MB): peak = 899.422 ; gain = 199.102 ; free physical = 34501 ; free virtual = 44935
INFO: [HLS 200-111] Finished Checking Pragmas Time (s): cpu = 00:00:44 ; elapsed = 00:03:24 . Memory (MB): peak = 899.422 ; gain = 199.102 ; free physical = 34501 ; free virtual = 44935
INFO: [HLS 200-10] Starting code transformations ...
INFO: [HLS 200-111] Finished Standard Transforms Time (s): cpu = 00:00:46 ; elapsed = 00:03:25 . Memory (MB): peak = 899.422 ; gain = 199.102 ; free physical = 34499 ; free virtual = 44934
INFO: [HLS 200-10] Checking synthesizability ...
ERROR: [SYNCHK 200-31] kmeans.cpp:30: dynamic memory allocation/deallocation is not supported: variable 'centroids'.
ERROR: [SYNCHK 200-61] kmeans.cpp:39: unsupported memory access on variable 'centroids' which is (or contains) an array with unknown size at compile time.
INFO: [SYNCHK 200-10] 2 error(s), 0 warning(s).
ERROR: [HLS 200-70] Synthesizability check failed.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'kmeans.cpp' ... 
INFO: [HLS 200-111] Finished Linking Time (s): cpu = 00:01:00 ; elapsed = 00:04:41 . Memory (MB): peak = 899.422 ; gain = 199.102 ; free physical = 34501 ; free virtual = 44936
INFO: [HLS 200-111] Finished Checking Pragmas Time (s): cpu = 00:01:00 ; elapsed = 00:04:41 . Memory (MB): peak = 899.422 ; gain = 199.102 ; free physical = 34501 ; free virtual = 44936
INFO: [HLS 200-10] Starting code transformations ...
INFO: [HLS 200-111] Finished Standard Transforms Time (s): cpu = 00:01:02 ; elapsed = 00:04:43 . Memory (MB): peak = 899.422 ; gain = 199.102 ; free physical = 34501 ; free virtual = 44936
INFO: [HLS 200-10] Checking synthesizability ...
INFO: [HLS 200-111] Finished Checking Synthesizability Time (s): cpu = 00:01:02 ; elapsed = 00:04:43 . Memory (MB): peak = 899.422 ; gain = 199.102 ; free physical = 34501 ; free virtual = 44936
INFO: [HLS 200-111] Finished Pre-synthesis Time (s): cpu = 00:01:02 ; elapsed = 00:04:43 . Memory (MB): peak = 899.422 ; gain = 199.102 ; free physical = 34484 ; free virtual = 44919
INFO: [HLS 200-111] Finished Architecture Synthesis Time (s): cpu = 00:01:02 ; elapsed = 00:04:43 . Memory (MB): peak = 899.422 ; gain = 199.102 ; free physical = 34484 ; free virtual = 44919
INFO: [HLS 200-10] Starting hardware synthesis ...
INFO: [HLS 200-10] Synthesizing 'kmeans' ...
INFO: [HLS 200-10] ----------------------------------------------------------------
INFO: [HLS 200-42] -- Implementing module 'kmeans' 
INFO: [HLS 200-10] ----------------------------------------------------------------
INFO: [SCHED 204-11] Starting scheduling ...
INFO: [SCHED 204-11] Finished scheduling.
INFO: [HLS 200-111]  Elapsed time: 283.53 seconds; current allocated memory: 97.654 MB.
INFO: [HLS 200-434] Only 0 loops out of a total 7 loops have been pipelined in this design.
INFO: [BIND 205-100] Starting micro-architecture generation ...
INFO: [BIND 205-101] Performing variable lifetime analysis.
INFO: [BIND 205-101] Exploring resource sharing.
INFO: [BIND 205-101] Binding ...
INFO: [BIND 205-100] Finished micro-architecture generation.
INFO: [HLS 200-111]  Elapsed time: 0.12 seconds; current allocated memory: 98.231 MB.
INFO: [HLS 200-10] ----------------------------------------------------------------
INFO: [HLS 200-10] -- Generating RTL for module 'kmeans' 
INFO: [HLS 200-10] ----------------------------------------------------------------
INFO: [RTGEN 206-500] Setting interface mode on port 'kmeans/idx' to 'ap_none'.
INFO: [RTGEN 206-500] Setting interface mode on port 'kmeans/num_clusters' to 'ap_none'.
INFO: [RTGEN 206-500] Setting interface mode on port 'kmeans/num_dim' to 'ap_none'.
INFO: [RTGEN 206-500] Setting interface mode on function 'kmeans' to 'ap_ctrl_hs'.
INFO: [RTGEN 206-100] Finished creating RTL model for 'kmeans'.
INFO: [HLS 200-111]  Elapsed time: 0.16 seconds; current allocated memory: 98.911 MB.
INFO: [RTMG 210-278] Implementing memory 'kmeans_data_in_ram (RAM)' using block RAMs.
INFO: [RTMG 210-278] Implementing memory 'kmeans_data_out_ram (RAM)' using block RAMs.
INFO: [RTMG 210-278] Implementing memory 'kmeans_centroids_ram (RAM)' using block RAMs.
INFO: [HLS 200-111] Finished generating all RTL models Time (s): cpu = 00:01:03 ; elapsed = 00:04:45 . Memory (MB): peak = 899.422 ; gain = 199.102 ; free physical = 34476 ; free virtual = 44913
INFO: [VHDL 208-304] Generating VHDL RTL for kmeans.
INFO: [VLOG 209-307] Generating Verilog RTL for kmeans.
INFO: [HLS 200-10] Creating and opening project '/home/vivado/HLStools/vivado/ready/Loopback/proj'.
INFO: [HLS 200-10] Creating and opening solution '/home/vivado/HLStools/vivado/ready/Loopback/proj/sol'.
